nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__can_bulk_delete_selected_names.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: bulk_delete_selected_names
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - ""
  - "<form"
  - "  id=\"bulk-delete-form\""
  - "  hx-delete=\"/names/delete\""
  - "  hx-target=\"#bulk-delete-table\""
  - "  hx-confirm=\"Are you sure you want to delete the selected names? This action cannot be undone.\""
  - ">"
  - "  <div class=\"mb-4 flex justify-between items-center\">"
  - "    <button"
  - "      type=\"submit\""
  - "      class=\"btn btn-error\""
  - "      id=\"delete-selected-btn\""
  - "      disabled"
  - "    >"
  - "      <svg"
  - "        xmlns=\"http://www.w3.org/2000/svg\""
  - "        class=\"h-4 w-4 mr-2\""
  - "        fill=\"none\""
  - "        viewBox=\"0 0 24 24\""
  - "        stroke=\"currentColor\""
  - "      >"
  - "        <path"
  - "          stroke-linecap=\"round\""
  - "          stroke-linejoin=\"round\""
  - "          stroke-width=\"2\""
  - "          d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1-1v3M4 7h16\""
  - "        />"
  - "      </svg>"
  - "      Delete Selected"
  - "    </button>"
  - "  </div>"
  - ""
  - "  <div class=\"overflow-x-auto\">"
  - "    <table class=\"table table-zebra w-full\">"
  - "      <thead>"
  - "        <tr>"
  - "          <th class=\"w-16\">"
  - "            <label>"
  - "              <input"
  - "                type=\"checkbox\""
  - "                class=\"checkbox\""
  - "                id=\"select-all\""
  - "                onchange=\"toggleAllCheckboxes(this)\""
  - "              />"
  - "            </label>"
  - "          </th>"
  - "          <th>Discord ID</th>"
  - "          <th>Server ID</th>"
  - "          <th>Name</th>"
  - "        </tr>"
  - "      </thead>"
  - "      <tbody>"
  - "        "
  - "        <tr id=\"name-row-3\">"
  - "          <td>"
  - "            <label>"
  - "              <input"
  - "                type=\"checkbox\""
  - "                class=\"checkbox\""
  - "                name=\"selected_ids\""
  - "                value=\"3\""
  - "                onchange=\"updateDeleteButton()\""
  - "              />"
  - "            </label>"
  - "          </td>"
  - "          <td>555444333</td>"
  - "          <td>test-server-1</td>"
  - "          <td class=\"font-semibold\">TestUser3</td>"
  - "        </tr>"
  - "        "
  - "      </tbody>"
  - "    </table>"
  - "  </div>"
  - "</form>"
  - ""
  - "<script>"
  - "  function toggleAllCheckboxes(selectAllCheckbox) {"
  - "    const checkboxes = document.querySelectorAll('input[name=\"selected_ids\"]');"
  - "    checkboxes.forEach((checkbox) => {"
  - "      checkbox.checked = selectAllCheckbox.checked;"
  - "    });"
  - "    updateDeleteButton();"
  - "  }"
  - ""
  - "  function updateDeleteButton() {"
  - "    const checkboxes = document.querySelectorAll("
  - "      'input[name=\"selected_ids\"]:checked',"
  - "    );"
  - "    const deleteBtn = document.getElementById(\"delete-selected-btn\");"
  - "    deleteBtn.disabled = checkboxes.length === 0;"
  - "  }"
  - ""
  - "  // Add event listeners to individual checkboxes"
  - "  document.addEventListener(\"DOMContentLoaded\", function () {"
  - "    const checkboxes = document.querySelectorAll('input[name=\"selected_ids\"]');"
  - "    checkboxes.forEach((checkbox) => {"
  - "      checkbox.addEventListener(\"change\", updateDeleteButton);"
  - "    });"
  - "    updateDeleteButton();"
  - "  });"
  - "</script>"
  - ""
  - ""
  - ""
  - "<div class=\"stats stats-horizontal shadow mt-6\">"
  - "  <div class=\"stat\">"
  - "    <div class=\"stat-title\">Total Names</div>"
  - "    <div class=\"stat-value\">1</div>"
  - "    <div class=\"stat-desc\">Names in database</div>"
  - "  </div>"
  - "</div>"
