nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__can_display_names_table_when_names_exist.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: names_table_with_existing_names
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<!doctype html>"
  - "<html lang=\"en\" data-theme=\"light\">"
  - "  <head>"
  - "    <title>Names - Nicknamer</title>"
  - "    <meta charset=\"UTF-8\" />"
  - "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.2\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <link"
  - "      href=\"https://cdn.jsdelivr.net/npm/daisyui@5\""
  - "      rel=\"stylesheet\""
  - "      type=\"text/css\""
  - "    />"
  - "    <script src=\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\"></script>"
  - "  </head>"
  - "  <body class=\"bg-base-200\" hx-ext=\"response-targets\">"
  - "    "
  - "<div class=\"container mx-auto p-4\">"
  - "  <div class=\"navbar bg-base-100 rounded-box shadow-lg mb-6\">"
  - "    <div class=\"navbar-start\">"
  - "      <a href=\"/\" class=\"btn btn-ghost normal-case text-xl\">← Back</a>"
  - "    </div>"
  - "    <div class=\"navbar-center\">"
  - "      <span class=\"text-xl font-bold\">Names Database</span>"
  - "    </div>"
  - "    <div class=\"navbar-end\">"
  - "      <!-- Empty space to balance the navbar -->"
  - "    </div>"
  - "  </div>"
  - "</div>"
  - ""
  - "    <div class=\"min-h-screen\">"
  - "<div class=\"container mx-auto p-4\">"
  - "  <div class=\"card bg-base-100 shadow-xl\">"
  - "    <div class=\"card-body\">"
  - "      <div class=\"flex justify-between items-center mb-4\">"
  - "        <h2 class=\"card-title text-2xl\">Stored Names</h2>"
  - "        <div class=\"flex gap-2\">"
  - "          <button"
  - "            class=\"btn btn-primary\""
  - "            hx-get=\"/names/add\""
  - "            hx-target=\"#add-name-form\""
  - "            hx-swap=\"innerHTML\""
  - "          >"
  - "            <svg"
  - "              xmlns=\"http://www.w3.org/2000/svg\""
  - "              class=\"h-5 w-5 mr-2\""
  - "              fill=\"none\""
  - "              viewBox=\"0 0 24 24\""
  - "              stroke=\"currentColor\""
  - "            >"
  - "              <path"
  - "                stroke-linecap=\"round\""
  - "                stroke-linejoin=\"round\""
  - "                stroke-width=\"2\""
  - "                d=\"M12 4v16m8-8H4\""
  - "              />"
  - "            </svg>"
  - "            Add Name"
  - "          </button>"
  - "          <a href=\"/names/bulk-add\" class=\"btn btn-secondary\">"
  - "            <svg"
  - "              xmlns=\"http://www.w3.org/2000/svg\""
  - "              class=\"h-5 w-5 mr-2\""
  - "              fill=\"none\""
  - "              viewBox=\"0 0 24 24\""
  - "              stroke=\"currentColor\""
  - "            >"
  - "              <path"
  - "                stroke-linecap=\"round\""
  - "                stroke-linejoin=\"round\""
  - "                stroke-width=\"2\""
  - "                d=\"M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M9 19l3 3m0 0l3-3m-3 3V10\""
  - "              />"
  - "            </svg>"
  - "            Bulk Add"
  - "          </a>"
  - "          <a href=\"/names/delete\" class=\"btn btn-error\">"
  - "            <svg"
  - "              xmlns=\"http://www.w3.org/2000/svg\""
  - "              class=\"h-5 w-5 mr-2\""
  - "              fill=\"none\""
  - "              viewBox=\"0 0 24 24\""
  - "              stroke=\"currentColor\""
  - "            >"
  - "              <path"
  - "                stroke-linecap=\"round\""
  - "                stroke-linejoin=\"round\""
  - "                stroke-width=\"2\""
  - "                d=\"M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1-1v3M4 7h16\""
  - "              />"
  - "            </svg>"
  - "            Bulk Delete"
  - "          </a>"
  - "        </div>"
  - "      </div>"
  - ""
  - "      <div id=\"add-name-form\" class=\"mb-4\"></div>"
  - ""
  - "      <div"
  - "        id=\"names-table\""
  - "        hx-get=\"/names/table\""
  - "        hx-trigger=\"load\""
  - "        hx-swap=\"innerHTML\""
  - "      >"
  - "        <div class=\"flex justify-center items-center py-8\">"
  - "          <span class=\"loading loading-spinner loading-md\"></span>"
  - "          <span class=\"ml-2\">Loading names...</span>"
  - "        </div>"
  - "      </div>"
  - "    </div>"
  - "  </div>"
  - "</div>"
  - "</div>"
  - "    <footer class=\"footer footer-center p-4 bg-base-300 text-base-content mt-6\">"
  - "      <aside>"
  - "        <p>"
  - "          Made with ❤️ by"
  - "          <a"
  - "            href=\"https://github.com/tacascer\""
  - "            target=\"_blank\""
  - "            rel=\"noopener noreferrer\""
  - "            >tacascer</a"
  - "          >"
  - "        </p>"
  - "      </aside>"
  - "    </footer>"
  - "  </body>"
  - "</html>"
