nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__can_get_empty_names_table_fragment_when_no_names_exist.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: empty_names_table_fragment
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - ""
  - "<div class=\"alert alert-info\">"
  - "  <svg"
  - "    aria-hidden=\"true\""
  - "    xmlns=\"http://www.w3.org/2000/svg\""
  - "    fill=\"none\""
  - "    viewBox=\"0 0 24 24\""
  - "    class=\"stroke-current shrink-0 w-6 h-6\""
  - "  >"
  - "    <path"
  - "      stroke-linecap=\"round\""
  - "      stroke-linejoin=\"round\""
  - "      stroke-width=\"2\""
  - "      d=\"M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z\""
  - "    ></path>"
  - "  </svg>"
  - "  <span>No names found in the database.</span>"
  - "</div>"
  - ""
  - ""
  - "<div class=\"stats stats-horizontal shadow mt-6\">"
  - "  <div class=\"stat\">"
  - "    <div class=\"stat-title\">Total Names</div>"
  - "    <div class=\"stat-value\">0</div>"
  - "    <div class=\"stat-desc\">Names in database</div>"
  - "  </div>"
  - "</div>"
