nicknamer/server/lib/tests/snapshots/tests_names_endpoints_tests_test__can_serve_bulk_add_form.snap
---
source: nicknamer/server/tests/names_endpoints_tests.rs
expression: snapshot_data
---
test_context: bulk_add_form
status: 200
headers:
  content-type: text/html; charset=utf-8
html_body:
  - "<!doctype html>"
  - "<html lang=\"en\" data-theme=\"light\">"
  - "  <head>"
  - "    <title>Bulk Add Names - Nicknamer</title>"
  - "    <meta charset=\"UTF-8\" />"
  - "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.2\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <link"
  - "      href=\"https://cdn.jsdelivr.net/npm/daisyui@5\""
  - "      rel=\"stylesheet\""
  - "      type=\"text/css\""
  - "    />"
  - "    <script src=\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\"></script>"
  - "  </head>"
  - "  <body class=\"bg-base-200\" hx-ext=\"response-targets\">"
  - "    "
  - "<div class=\"container mx-auto p-4\">"
  - "  <div class=\"navbar bg-base-100 rounded-box shadow-lg mb-6\">"
  - "    <div class=\"navbar-start\">"
  - "      <a href=\"/names\" class=\"btn btn-ghost normal-case text-xl\""
  - "        >← Back to Names</a"
  - "      >"
  - "    </div>"
  - "    <div class=\"navbar-center\">"
  - "      <span class=\"text-xl font-bold\">Bulk Add Names</span>"
  - "    </div>"
  - "    <div class=\"navbar-end\">"
  - "      <!-- Empty space to balance the navbar -->"
  - "    </div>"
  - "  </div>"
  - "</div>"
  - ""
  - "    <div class=\"min-h-screen\">"
  - "<div class=\"container mx-auto p-4\">"
  - "  <div class=\"card bg-base-100 shadow-xl\">"
  - "    <div class=\"card-body\">"
  - "      <h2 class=\"card-title text-2xl mb-4\">Bulk Add Names from YAML</h2>"
  - "      <div id=\"form-container\">"
  - "        <form"
  - "          hx-post=\"/names/bulk-add\""
  - "          hx-target=\"#form-container\""
  - "          hx-swap=\"innerHTML\""
  - "          class=\"space-y-4\""
  - "        >"
  - "          <div class=\"form-control\">"
  - "            <label class=\"label\" for=\"server_id\">"
  - "              <span class=\"label-text\">Server ID</span>"
  - "            </label>"
  - "            <input"
  - "              type=\"text\""
  - "              id=\"server_id\""
  - "              name=\"server_id\""
  - "              class=\"input input-bordered w-full\""
  - "              required"
  - "              placeholder=\"Enter the Discord server ID\""
  - "            />"
  - "          </div>"
  - ""
  - "          <div class=\"form-control\">"
  - "            <label class=\"label\" for=\"yaml_content\">"
  - "              <span class=\"label-text\">YAML Content</span>"
  - "            </label>"
  - "            <textarea"
  - "              id=\"yaml_content\""
  - "              name=\"yaml_content\""
  - "              class=\"textarea textarea-bordered w-full h-48\""
  - "              required"
  - "              placeholder='Paste your YAML content here. Format:"
  - "123456789012345678: \"Alice\""
  - "987654321098765432: \"Bob\""
  - "456789123456789123: \"Charlie\"'"
  - "            ></textarea>"
  - "            <label class=\"label\">"
  - "              <span class=\"label-text-alt\">"
  - "                Paste YAML content with format: discord_id: \"display_name\""
  - "              </span>"
  - "            </label>"
  - "          </div>"
  - ""
  - "          <div class=\"form-control\">"
  - "            <button type=\"submit\" class=\"btn btn-primary\">"
  - "              <svg"
  - "                xmlns=\"http://www.w3.org/2000/svg\""
  - "                class=\"h-5 w-5 mr-2\""
  - "                fill=\"none\""
  - "                viewBox=\"0 0 24 24\""
  - "                stroke=\"currentColor\""
  - "              >"
  - "                <path"
  - "                  stroke-linecap=\"round\""
  - "                  stroke-linejoin=\"round\""
  - "                  stroke-width=\"2\""
  - "                  d=\"M12 6v6m0 0v6m0-6h6m-6 0H6\""
  - "                />"
  - "              </svg>"
  - "              Add Names"
  - "            </button>"
  - "          </div>"
  - "        </form>"
  - ""
  - "        <div class=\"mt-6\">"
  - "          <div class=\"alert alert-info\">"
  - "            <svg"
  - "              xmlns=\"http://www.w3.org/2000/svg\""
  - "              fill=\"none\""
  - "              viewBox=\"0 0 24 24\""
  - "              class=\"stroke-current shrink-0 w-6 h-6\""
  - "            >"
  - "              <path"
  - "                stroke-linecap=\"round\""
  - "                stroke-linejoin=\"round\""
  - "                stroke-width=\"2\""
  - "                d=\"M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z\""
  - "              ></path>"
  - "            </svg>"
  - "            <div>"
  - "              <h3 class=\"font-bold\">YAML Format Example:</h3>"
  - "              <pre class=\"mt-2 text-sm\">"
  - "123456789012345678: \"Alice\""
  - "987654321098765432: \"Bob\""
  - "456789123456789123: \"Charlie\"</pre"
  - "              >"
  - "              <p class=\"mt-2 text-sm\">"
  - "                Each line should contain a Discord ID followed by a colon and"
  - "                the display name in quotes. You can paste the content directly"
  - "                into the text area above."
  - "              </p>"
  - "            </div>"
  - "          </div>"
  - "        </div>"
  - "      </div>"
  - "    </div>"
  - "  </div>"
  - "</div>"
  - "</div>"
  - "    <footer class=\"footer footer-center p-4 bg-base-300 text-base-content mt-6\">"
  - "      <aside>"
  - "        <p>"
  - "          Made with ❤️ by"
  - "          <a"
  - "            href=\"https://github.com/tacascer\""
  - "            target=\"_blank\""
  - "            rel=\"noopener noreferrer\""
  - "            >tacascer</a"
  - "          >"
  - "        </p>"
  - "      </aside>"
  - "    </footer>"
  - "  </body>"
  - "</html>"
